default/homepage/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-route
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.local.unrelated.family`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
  tls:
    secretName: unrelated-family-tls
